# DEploid-Lasso-lib

./: .gitignore  .travis.yml  Brewfile  Makefile  Makefile.am  README.md  circle.yml  configure.ac  main.cpp
.ci/: style.sh
.circleci/: config.yml
data/: PG0402-C_chrom2.wsaf  myX.txt  myy.txt  panel_chrom2.txt
src/: dEploidLasso.cpp  dEploidLasso.hpp  dEploidLassoDBG.cpp  dbgmacro.hpp  lasso.cpp  lasso.hpp
src/fortran/: chkvars.f90  elnet.f90  elnet2.f90  elnetn.f90  get_int_parms.f90  standard1.f90  tmp.f90
tests/: PG0402-C_chrom1.wsaf  Rscripts.r  panel_chrom1.txt  test-coverage-local.sh
tests/unittest/: test_DEploidLASSO.cpp  test_lassoEg1.cpp  test_runner.cpp  test_standardizeVector.cpp  test_txtReader.cpp
tests/validation/: .gitignore  common.r  cross_3D7xHB3  cross_7G8xGB4  cross_HB3xDD2  customizePanels.r  deconvolute.r  getErrorCount.r  panel_from_crosses.txt  plotErrorCountPdfOnly2Strain.drop.lasso.r
utility/: script.r
